# Rust-Android-WIFI-File-Manager

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: adblock.js  custom-bottom-sheet.js  custom-dialog.js  custom-item.js  editor.html  editor.js  index.css  index.html  index.js  markdown.html  markdown.js  notes.html  package-lock.json  shared.js  srt.html  video.html
app/src/main/assets/bookmark/: bookmark.html
app/src/main/assets/editor/: custom-actions.js  data.js  editor.html  editor.js  glue.js  load_data.js  render.js  save_data.js  shared.js  test.html  utils.js
app/src/main/assets/home/: actions.js  calculations.js  index.css  index.html  index.js  settings.html  shared.js
app/src/main/assets/index/: actions.js  calculations.js  context_menu.js  custom-bottom-sheet.js  custom-dialog.js  custom-toast.js  custom_dialog.js  data.js  delete_files.js  dialog.css  favorite.js  glue.js  index.css  index.html  index.js  move_files.js  new_directory.js  new_file.js  open_file.js  render.js  shared.js  title.js  upload.js  utils.js
app/src/main/assets/markdown/: markdown.html  markdown.js
app/src/main/assets/music/: music.css  music.html  music.js  rust.code-workspace
app/src/main/assets/notes/: notes.html
app/src/main/assets/video/: actions.js  calculations.js  custom_toast.js  shared.js  strings.js  test.html  title.js  video.css  video.html  video.js  videos.html
app/src/main/java/psycho/euphoria/killer/: Actions.java  BitmapUtils.java  Calculations.java  ContextCompat.java  CustomWebChromeClient.java  CustomWebViewClient.java  Data.java  Database.java  Glue.java  MainActivity.java  PlayerActivity.java  PlayerSizeInformation.java  PlayerUtils.java  PublicFileProvider.java  SeekView.java  ServerService.java  Shared.java  SimpleTimeBar.java  Stopwatch.java  TimeBar.java  Utils.java  WebAppInterface.java
app/src/main/java/psycho/euphoria/killer/files/: DateParser.java  DatePrinter.java  DispatchQueue.java  DispatchQueuePool.java  FastDateFormat.java  FastDateParser.java  FastDatePrinter.java  FileLog.java  FormatCache.java  SunDate.java
app/src/main/java/psycho/euphoria/killer/lib/: InternalPointerMarker.java  JNIReachabilityFence.java  RustLog.java
app/src/main/java/psycho/euphoria/killer/service/: Actions.java  Calculations.java  Data.java
app/src/main/java/psycho/euphoria/killer/tasks/: Database.java  DownloadUtils.java  DownloaderRequest.java  DownloaderService.java  RequestListener.java  Task.java  TaskInfo.java
app/src/main/java/psycho/euphoria/killer/utils/: AdBlock.java  AroundFileUriExposedException.java  ClearWebViewCache.java  CreateNotification.java  CreateNotificationChannel.java  DetectResource.java  FilterNeedPermissions.java  GenerateVideoThumbnails.java  GetAction.java  GetPendingIntentDismiss.java  GetUsablePort.java  InitializeWebView.java  LaunchServer.java  LoadStartPage.java  Refresh.java  RequestPermission.java  RequestStorageManagerPermission.java  RestartService.java  SaveRenderedWebPage.java  SetWebView.java  ShouldOverrideUrlLoading.java
app/src/main/java/psycho/euphoria/killer/video/: AndroidUtilities.java  AnimatedFloat.java  CubicBezierInterpolator.java  LoopManager.java  PlayerActivity.java  PlayerSizeInformation.java  PlayerUtils.java  SeekManager.java  SeekView.java  SimpleTimeBar.java  SquareFrameLayout.java  TextStyleSpan.java  TimeBar.java  URLSpanNoUnderline.java  Utils.java  VideoItem.java  VideoItemAdapter.java  VideoListActivity.java  VideoPlayerSeekBar.java
app/src/main/res/layout/: main.xml  player_activity.xml  video_item.xml  video_list_activity.xml
app/src/main/res/menu/: file_list.xml  main.xml  video_item.xml  video_list.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: file_paths.xml  settings.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/rocket_seek_stream/src/: lib.rs  mimetypes.rs  seekstream.rs
app/src/main/rust/src/: asset.rs  assets.rs  error.rs  handler.rs  handlers.rs  headers.rs  java_glue.rs.in  lib.rs  mimetypes.rs  res.rs  server.rs  store.rs  strings.rs  util.rs  utils.rs
app/src/main/rust/src/data/: config.rs  mod.rs  notes.rs  snippet.rs  statistics.rs
app/src/main/rust/src/handlers/: api_article.rs  api_asset_file.rs  api_file.rs  api_file_delete.rs  api_file_new.rs  api_file_rename.rs  api_files.rs  api_zip.rs  cmd.rs  compress_zip.rs  content_disposition.rs  cors.rs  data.rs  db.rs  editor.rs  file.rs  index.rs  index_file.rs  markdown.rs  mod.rs  note.rs  notes.rs  rust.code-workspace  subtitle.rs  title.rs  translate.rs  upload.rs  video.rs
app/src/main/rust/src/headers/: mod.rs  range_header.rs  referer.rs
app/src/main/rust/src/routes/: assets.rs  errors.rs  files.rs  mod.rs  utils.rs
app/src/main/rust/src/types/: fileItem.rs  mod.rs
gradle/wrapper/: gradle-wrapper.properties
hello-wasm/: Cargo.toml
hello-wasm/src/: lib.rs
hello-wasm/src/utils/: mod.rs
rust_lib/: Cargo.toml  build.rs
rust_lib/.cargo/: config.toml
rust_lib/src/: java_glue.rs.in  lib.rs
