[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lib"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rifgen = "*"
jni-sys = "*"
#logging
log = "*"
log-panics="*"
android_logger = "*"
serde = "1.0.158"
# see https://github.com/tokio-rs/tokio
tokio = { version = "1.26.0", features = ["full"] }
# see https://github.com/seanmonstar/warp
warp = "0.3.3"
# https://docs.rs/crate/reqwest/latest
reqwest = { version = "0.11.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ndk = "0.7.0"

[build-dependencies]
flapigen = { git = "https://github.com/Dushistov/flapigen-rs", rev = "d79a34f22e73d90fe9f2423148a7421d39b8ed69" }
rifgen = "*"
