[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/jni-rs/jni-rs
jni = { version = "0.20.0"}
ndk = { version= "0.7.0", features = ["api-level-30", "audio"]}
ndk-sys = "0.4.1"
# https://github.com/dtolnay/anyhow
anyhow= "1.0.66"
#logging
log = "*"
log-panics="*"
android_logger = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.2"
postgres = "0.19.5"
rocket = { version = "=0.5.0-rc.3", features = [ "json"] }

[dependencies.regex]
version = "1.3"
default-features = false
# regex currently requires the standard library, you must re-enable it.

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]

[dependencies.tokio]
version = "1.6.1"
features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"]
